# yeclite-mobile

android/app/src/main/java/com/zecwalletmobile/: RPCModule.kt
android/gradle/wrapper/: gradle-wrapper.properties
app/: utils.ts
components/: ReceiveScreen.tsx  SendScreen.tsx
ios/: RPCModule.m
rust/lib/: Cargo.toml
rust/lib/src/: lib.rs
