[package]
name = "rustlib"
version = "1.0.0"
authors = ["Aditya Kulkarni <aditya@zecwallet.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.10.2", default-features = false }
zecwalletlitelib = { git="https://github.com/yecdev/yecshell", default-features=false, rev="82de90b24be9b2f43642ea301b18441634439bb5" }
#zecwalletlitelib = { path = "../../../zecwallet-light-cli/lib", default-features=false }
lazy_static = "1.4.0"
android_logger = "0.8.6"
log = "0.4.8"
base64 = "0.11.0"
